# modm_starter_project

./: .gitignore  CMakeLists.txt  README.md  project.xml
cmake/: CompilerWarnings.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  TargetSettings.cmake  ToolChain.cmake
hdr_only_lib/: CMakeLists.txt
hdr_only_lib/include/test/: header1.h  header2.h
shared_lib/: CMakeLists.txt
shared_lib/include/: mylib.h
shared_lib/src/: mylib.cpp
shared_lib/src/include/: private.h
src/: CMakeLists.txt  main.cpp
src/include/core/: board.hpp
